Enhanced api url setup

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>TalentRateClient</title>
   <base href="/">
+  <!-- Load environment variables -->
+  <script type="application/javascript" src="env.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
