--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <p>Starting Talent Rate...</p>
+  </app-root>
 </body>
 </html>
